--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -1,6 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        .navbar {
+            display: flex;
+            justify-content: flex-end;
+            background-color: #333;
+            padding: 10px;
+        }
+        .navbar a {
+            color: white;
+            padding: 14px 250px;
+            text-decoration: none;
+            text-align: center;
+        }
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        
+        
+    </style>
+    <style>
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 0,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 24
+        }
+    </style>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,33 +43,67 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
     crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+   
 
     <title>Dashboard</title>
 </head>
 <body>
+ 
     <div class="container d-flex justify-content-between align-items-center">
         <div>
-            <h1>Welcome to your Flight Book, {{user.first_name}} </h1>
-            <p>All Flight Books:</p>
-        </div>
-        <div class="d-flex justif-content-between align-items-center w-25 gap-4">
-            <a href="/trips/new" class="btn btn-primary">+Add a New Trip</a>
-            <a href="/logout" class="btn btn-danger">LOGOUT</a>
-            <a href="/tripss" class="btn btn-warning">Available Trips</a>
+            <h1>Welcome to your Flight Booking System, {{user.first_name}} </h1>
+            <a href="">
+                <span class="material-symbols-outlined">
+                    travel
+                </span>
+                <p>All Booked Flights:</p>
+            </a>
+            
         </div>
         
+        
+        
+        
     </div>
-
+    <div class="navbar">
+        <nav>
+            <a href="/trips/new" class="top-right-buttons">
+                <span class="material-symbols-outlined">add</span> Add a New Trip
+            </a>
+            <a href="/tripss" class="top-right-buttons">
+                <span class="material-symbols-outlined">flight</span> Available Trips
+            </a>
+            <a href="/logout" class="top-right-buttons">
+                <span class="material-symbols-outlined">logout</span> LOGOUT
+            </a>
+        </nav>
+        
+        
+    </div>
+          
     <div class="container">
         <table class="table table-stripe table-bordered">
             <thead>
                 <tr>
-                    <th>Full Name</th>
-                    <th>Destination</th>
-                    <th>Date</th>
-                    <th>Class</th>
-                    <th>Rating</th>
-                    <th>Action</th>
+                    <th>
+                        <span class="material-symbols-outlined">person</span> Full Name
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">location_on</span> Destination
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">event</span> Date
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">flight_class</span> Class
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">star</span> Rating
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">settings</span> Action
+                    </th>
                 </tr>
             </thead>
 
@@ -64,6 +133,22 @@
             </tbody>
         </table>
     </div>
+    <br>
+    <br>
+    <br>
+    <a href="#">
+        <span class="material-symbols-outlined">support_agent</span>Contact support for any issue
+        <br>
+    </a>
+    <a href="#">
+        <span class="material-symbols-outlined">report</span>Report a bug here
+        <h3></h3>
+        <br>
+        <br>
+    </a>
+    <a href="#">
+        <span class="material-symbols-outlined">cookie</span>Accept all cookies
+    </a>
 </body>
 
 </html>
