--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -12,7 +12,27 @@
             background-repeat: no-repeat;
             background-position: center;
         }
+        .material-symbols-outlined {
+            font-size: 20px;        /* Adjust the size */
+            vertical-align: middle; /* Align with the text */
+            margin-right: 5px;      /* Space between icon and text */
+        }
+        .large-image {
+            width: 800px;
+            height: 800px;
+        }
+   
+
+
+        
+
+
     </style>
+
+
+
+
+
 
 
 
@@ -21,11 +41,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- <img src="{{ url_for('static', filename='this.jpg') }}"/> -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    
         
     <title>Document</title>
 </head>
 <body>
+    
     <div class="container">
         <div class="text-center">
             <h1 style="color:rgb(0, 140, 255);" >Flight Booking</h1>
@@ -34,54 +57,110 @@
         <br>
         <div class="container">
             
-            <div class="row ">
+            <div class="row">
                 <div class="col-6">
                     <h3>
-                        REGISTER
+                        <span class="material-symbols-outlined">person_add</span> REGISTER
                     </h3>
                     
                     <form action="/create/user" method="post">
                         <div class="form-group">
-                            <label for="">First Name</label>
+                            <label for="">
+                                <span class="material-symbols-outlined">badge</span> First Name
+                            </label>
                             <input type="text" class="form-control" name="first_name">
                         </div>
                         <div class="form-group">
-                            <label for="">Last Name</label>
+                            <label for="">
+                                <span class="material-symbols-outlined">badge</span> Last Name
+                            </label>
                             <input type="text" class="form-control" name="last_name">
                         </div>
                         <div class="form-group">
-                            <label for="">Email</label>
+                            <label for="">
+                                <span class="material-symbols-outlined">mail</span> Email
+                            </label>
                             <input type="email" class="form-control" name="email">
                         </div>
                         <div class="form-group">
-                            <label for="">Password</label>
+                            <label for="">
+                                <span class="material-symbols-outlined">lock</span> Password
+                            </label>
                             <input type="password" class="form-control" name="password">
                         </div>
                         <div class="form-group">
-                            <label for="">Confirm Password</label>
+                            <label for="">
+                                <span class="material-symbols-outlined">lock_reset</span> Confirm Password
+                            </label>
                             <input type="password" class="form-control" name="confirm_password">
                         </div>
-                        <button class="btn btn-primary">REGISTER</button>
+                        <button class="btn btn-primary">
+                            <span class="material-symbols-outlined">person_add</span> REGISTER
+                        </button>
                     </form>
                 </div>
                 <div class="col-6">
-                    <h3>LOGIN</h3>
+                    <h3>
+                        <span class="material-symbols-outlined">login</span> LOGIN
+                    </h3>
                     
                     <form action="/login" method="post">
                         <div class="form-group">
-                            <label for="">Email</label>
+                            <label for="">
+                                <span class="material-symbols-outlined">mail</span> Email
+                            </label>
                             <input type="email" class="form-control" name="email">
                         </div>
                         <div class="form-group">
-                            <label for="">Password</label>
+                            <label for="">
+                                <span class="material-symbols-outlined">lock</span> Password
+                            </label>
                             <input type="password" class="form-control" name="password">
                         </div>
-                        <button class="btn btn-success">LOGIN</button>
+                        <button class="btn btn-success">
+                            <span class="material-symbols-outlined">login</span> LOGIN
+                        </button>
                     </form>
                 </div>
             </div>
+            
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <a href="#">
+        <span class="material-symbols-outlined">support_agent</span>Contact support for any issue
+        <br>
+    </a>
+    <a href="#">
+        <span class="material-symbols-outlined">report</span>Report a bug here
+        <h3></h3>
+        <br>
+        <br>
+    </a>
+    <a href="#">
+        <span class="material-symbols-outlined">cookie</span>Accept all cookies
+    </a>
+    
+
+
+
+
+
+<!-- footer -->
+ 
+    
+
+
+    
+
+
+
+
+
+    
+
     
     
 </body>
