--- a/flask_app/templates/trip_edit.html
+++ b/flask_app/templates/trip_edit.html
@@ -15,27 +15,30 @@
         .material-symbols-outlined {
             font-size: 20px;        /* Adjust the size */
             vertical-align: middle; /* Align with the text */
-            margin-right: 5px;      /* Space between the icon and text */
+            margin-right: 5px;      /* Space between icon and text */
         }
 
     </style>
+    
+
+
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Create++</title>
+    <title>Edit</title>
 </head>
 
 <body>
+    
 
 
-    <h3 class="text-center , text-danger">
-        Book Your Flight Here !
+    <h3 class="text-center">
+        Edit Your Trip Here!!
     </h3>
-    <br>
-    <br>
     <div class="top-right-buttons">
         <a href="/trips" class="btn btn-primary">
             <span class="material-symbols-outlined">flight</span> Booked Flights
@@ -44,13 +47,12 @@
             <span class="material-symbols-outlined">logout</span> Logout
         </a>
     </div>
-    
-    
-    
 
+    {%for message in get_flashed_messages(category_filter=["show"])%}
+    <p class="text-danger">{{message}}</p>
+    {%endfor%}
     
-    
-    <form action="/trips/add" method="post" class="row text-center">
+    <form action="/trips/update/{{trip.id}}" method="post" class="row text-center ">
         <div class="col-6">
             <div class="form-group">
                 <label for="">
@@ -89,8 +91,9 @@
                 </label>
                 <input type="text" class="form-control" name="rate" required>
             </div>
-            <button type="submit" class="btn btn-primary">
-                <span class="material-symbols-outlined">add</span> Add
+            
+            <button class="btn btn-primary">
+                <span class="material-symbols-outlined">update</span> Update
             </button>
         </div>
         
@@ -112,7 +115,6 @@
     <a href="#">
         <span class="material-symbols-outlined">cookie</span>Accept all cookies
     </a>
-    
 
 
 
