--- a/flask_app/templates/trips.html
+++ b/flask_app/templates/trips.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Document</title>
 </head>
 <body>
@@ -23,22 +24,40 @@
         Available Trips Here !
     </h1>
     <div class="top-right-buttons">
-        <a href="/trips" class="btn btn-primary">Booked Flights</a>
-        <a href="/logout" class="btn btn-danger">Logout</a>
+        <a href="/trips" class="btn btn-primary">
+            <span class="material-symbols-outlined">flight</span> Booked Flights
+        </a>
+        <a href="/logout" class="btn btn-danger">
+            <span class="material-symbols-outlined">logout</span> Logout
+        </a>
     </div>
+    
     
 
     <div class="trip">
-        <h2>Today Trips</h2>
+        <h2>
+            <span class="material-symbols-outlined">today</span> today Trips:     
+        </h2>
         <table class="table table-stripe table-bordered">
             <thead>
                 <tr>
-                    <th>From</th>
-                    <th>To</th>
-                    <th>Departure Time</th>
-                    <th>Arrival Time</th>
-                    <th>Price (Roundtrip)</th>
+                    <th>
+                        <span class="material-symbols-outlined">flight_takeoff</span> From
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">flight_land</span> To
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">schedule</span> Departure Time
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">access_time</span> Arrival Time
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">attach_money</span> Price (Roundtrip)
+                    </th>
                 </tr>
+                
             </thead>
             <tbody>
                 <tr>
@@ -183,17 +202,30 @@
                 </tr>
             </tbody>
         </table>
-        <h2>Tomorrow Trips</h2>
+        <h2>
+            <span class="material-symbols-outlined">calendar_today</span> Tomorrow Trips:     
+        </h2>
         <br>
         <table class="table table-stripe table-bordered">
             <thead>
                 <tr>
-                    <th>From</th>
-                    <th>To</th>
-                    <th>Departure Time</th>
-                    <th>Arrival Time</th>
-                    <th>Price (Roundtrip)</th>
+                    <th>
+                        <span class="material-symbols-outlined">flight_takeoff</span> From
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">flight_land</span> To
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">schedule</span> Departure Time
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">access_time</span> Arrival Time
+                    </th>
+                    <th>
+                        <span class="material-symbols-outlined">attach_money</span> Price (Roundtrip)
+                    </th>
                 </tr>
+                
             </thead>
             <tbody>
                 <tr>
@@ -341,6 +373,22 @@
         
 
     </div>
+    <br>
+    <br>
+    <br>
+    <a href="#">
+        <span class="material-symbols-outlined">support_agent</span>Contact support for any issue
+        <br>
+    </a>
+    <a href="#">
+        <span class="material-symbols-outlined">report</span>Report a bug here
+        <h3></h3>
+        <br>
+        <br>
+    </a>
+    <a href="#">
+        <span class="material-symbols-outlined">cookie</span>Accept all cookies
+    </a>
 
     
 </body>
