--- a/flask_app/templates/trips.html
+++ b/flask_app/templates/trips.html
@@ -11,6 +11,28 @@
         .top-right-buttons a {
             margin-left: 5px;    /* Space between buttons */
         }
+        footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #f1f1f1;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    margin: 10px 0;
+}
+
+footer a:hover {
+    color: #007bff; /* Optional hover color */
+}
+
+.material-symbols-outlined {
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -376,19 +398,20 @@
     <br>
     <br>
     <br>
-    <a href="#">
-        <span class="material-symbols-outlined">support_agent</span>Contact support for any issue
-        <br>
-    </a>
-    <a href="#">
-        <span class="material-symbols-outlined">report</span>Report a bug here
-        <h3></h3>
-        <br>
-        <br>
-    </a>
-    <a href="#">
-        <span class="material-symbols-outlined">cookie</span>Accept all cookies
-    </a>
+    <footer style="text-align: center; padding: 20px; background-color: #f1f1f1;">
+        <a href="#" style="text-decoration: none; color: black;">
+            <span class="material-symbols-outlined">support_agent</span> Contact support for any issue
+            <br>
+        </a>
+        <a href="#" style="text-decoration: none; color: black;">
+            <span class="material-symbols-outlined">report</span> Report a bug here
+            <br>
+            <br>
+        </a>
+        <a href="#" style="text-decoration: none; color: black;">
+            <span class="material-symbols-outlined">cookie</span> Accept all cookies
+        </a>
+    </footer>
 
     
 </body>
