--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -34,6 +34,28 @@
           'GRAD' 0,
           'opsz' 24
         }
+        footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #f1f1f1;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    margin: 10px 0;
+}
+
+footer a:hover {
+    color: #007bff; /* Optional hover color */
+}
+
+.material-symbols-outlined {
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
     </style>
 
     <meta charset="UTF-8">
@@ -136,19 +158,20 @@
     <br>
     <br>
     <br>
-    <a href="#">
-        <span class="material-symbols-outlined">support_agent</span>Contact support for any issue
-        <br>
-    </a>
-    <a href="#">
-        <span class="material-symbols-outlined">report</span>Report a bug here
-        <h3></h3>
-        <br>
-        <br>
-    </a>
-    <a href="#">
-        <span class="material-symbols-outlined">cookie</span>Accept all cookies
-    </a>
+    <footer style="text-align: center; padding: 20px; background-color: #f1f1f1;">
+        <a href="#" style="text-decoration: none; color: black;">
+            <span class="material-symbols-outlined">support_agent</span> Contact support for any issue
+            <br>
+        </a>
+        <a href="#" style="text-decoration: none; color: black;">
+            <span class="material-symbols-outlined">report</span> Report a bug here
+            <br>
+            <br>
+        </a>
+        <a href="#" style="text-decoration: none; color: black;">
+            <span class="material-symbols-outlined">cookie</span> Accept all cookies
+        </a>
+    </footer>
 </body>
 
 </html>
