--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -21,6 +21,28 @@
             width: 800px;
             height: 800px;
         }
+        footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #f1f1f1;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    margin: 10px 0;
+}
+
+footer a:hover {
+    color: #007bff; /* Optional hover color */
+}
+
+.material-symbols-outlined {
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
    
 
 
@@ -37,132 +59,98 @@
 
 
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-    
-        
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<title>Document</title>
 </head>
 <body>
-    
-    <div class="container">
-        <div class="text-center">
-            <h1 style="color:rgb(0, 140, 255);" >Flight Booking</h1>
-        </div>
-        <br>
-        <br>
-        <div class="container">
-            
-            <div class="row">
-                <div class="col-6">
-                    <h3>
-                        <span class="material-symbols-outlined">person_add</span> REGISTER
-                    </h3>
-                    
-                    <form action="/create/user" method="post">
-                        <div class="form-group">
-                            <label for="">
-                                <span class="material-symbols-outlined">badge</span> First Name
-                            </label>
-                            <input type="text" class="form-control" name="first_name">
-                        </div>
-                        <div class="form-group">
-                            <label for="">
-                                <span class="material-symbols-outlined">badge</span> Last Name
-                            </label>
-                            <input type="text" class="form-control" name="last_name">
-                        </div>
-                        <div class="form-group">
-                            <label for="">
-                                <span class="material-symbols-outlined">mail</span> Email
-                            </label>
-                            <input type="email" class="form-control" name="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="">
-                                <span class="material-symbols-outlined">lock</span> Password
-                            </label>
-                            <input type="password" class="form-control" name="password">
-                        </div>
-                        <div class="form-group">
-                            <label for="">
-                                <span class="material-symbols-outlined">lock_reset</span> Confirm Password
-                            </label>
-                            <input type="password" class="form-control" name="confirm_password">
-                        </div>
-                        <button class="btn btn-primary">
-                            <span class="material-symbols-outlined">person_add</span> REGISTER
-                        </button>
-                    </form>
-                </div>
-                <div class="col-6">
-                    <h3>
-                        <span class="material-symbols-outlined">login</span> LOGIN
-                    </h3>
-                    
-                    <form action="/login" method="post">
-                        <div class="form-group">
-                            <label for="">
-                                <span class="material-symbols-outlined">mail</span> Email
-                            </label>
-                            <input type="email" class="form-control" name="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="">
-                                <span class="material-symbols-outlined">lock</span> Password
-                            </label>
-                            <input type="password" class="form-control" name="password">
-                        </div>
-                        <button class="btn btn-success">
-                            <span class="material-symbols-outlined">login</span> LOGIN
-                        </button>
-                    </form>
-                </div>
+
+<div class="container">
+    <!-- Flash message section -->
+    {% with messages = get_flashed_messages(with_categories=True) %}
+      {% if messages %}
+        <div class="alert-container">
+          {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
-            
+          {% endfor %}
+        </div>
+      {% endif %}
+    {% endwith %}
+
+    <div class="text-center">
+        <h1 style="color:rgb(0, 140, 255);">Flight Booking</h1>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <h3><span class="material-symbols-outlined">person_add</span> REGISTER</h3>
+                <form action="/create/user" method="post">
+                    <div class="form-group">
+                        <label for=""><span class="material-symbols-outlined">badge</span> First Name</label>
+                        <input type="text" class="form-control" name="first_name">
+                    </div>
+                    <div class="form-group">
+                        <label for=""><span class="material-symbols-outlined">badge</span> Last Name</label>
+                        <input type="text" class="form-control" name="last_name">
+                    </div>
+                    <div class="form-group">
+                        <label for=""><span class="material-symbols-outlined">mail</span> Email</label>
+                        <input type="email" class="form-control" name="email">
+                    </div>
+                    <div class="form-group">
+                        <label for=""><span class="material-symbols-outlined">lock</span> Password</label>
+                        <input type="password" class="form-control" name="password">
+                    </div>
+                    <div class="form-group">
+                        <label for=""><span class="material-symbols-outlined">lock_reset</span> Confirm Password</label>
+                        <input type="password" class="form-control" name="confirm_password">
+                    </div>
+                    <button class="btn btn-primary"><span class="material-symbols-outlined">person_add</span> REGISTER</button>
+                </form>
+            </div>
+            <div class="col-6">
+                <h3><span class="material-symbols-outlined">login</span> LOGIN</h3>
+                <form action="/login" method="post">
+                    <div class="form-group">
+                        <label for=""><span class="material-symbols-outlined">mail</span> Email</label>
+                        <input type="email" class="form-control" name="email">
+                    </div>
+                    <div class="form-group">
+                        <label for=""><span class="material-symbols-outlined">lock</span> Password</label>
+                        <input type="password" class="form-control" name="password">
+                    </div>
+                    <button class="btn btn-success"><span class="material-symbols-outlined">login</span> LOGIN</button>
+                </form>
+            </div>
         </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <a href="#">
-        <span class="material-symbols-outlined">support_agent</span>Contact support for any issue
-        <br>
+</div>
+
+<br><br><br>
+
+<footer style="text-align: center; padding: 20px; background-color: #f1f1f1;">
+    <a href="#" style="text-decoration: none; color: black;">
+        <span class="material-symbols-outlined">support_agent</span> Contact support for any issue
     </a>
-    <a href="#">
-        <span class="material-symbols-outlined">report</span>Report a bug here
-        <h3></h3>
-        <br>
-        <br>
+    <a href="#" style="text-decoration: none; color: black;">
+        <span class="material-symbols-outlined">report</span> Report a bug here
     </a>
-    <a href="#">
-        <span class="material-symbols-outlined">cookie</span>Accept all cookies
+    <a href="#" style="text-decoration: none; color: black;">
+        <span class="material-symbols-outlined">cookie</span> Accept all cookies
     </a>
-    
+</footer>
 
-
-
-
-
-<!-- footer -->
- 
-    
-
-
-    
-
-
-
-
-
-    
-
-    
-    
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
