--- a/flask_app/templates/trip_create.html
+++ b/flask_app/templates/trip_create.html
@@ -17,6 +17,28 @@
             vertical-align: middle; /* Align with the text */
             margin-right: 5px;      /* Space between the icon and text */
         }
+        footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #f1f1f1;
+}
+
+footer a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    margin: 10px 0;
+}
+
+footer a:hover {
+    color: #007bff; /* Optional hover color */
+}
+
+.material-symbols-outlined {
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
 
     </style>
     <meta charset="UTF-8">
@@ -44,6 +66,9 @@
             <span class="material-symbols-outlined">logout</span> Logout
         </a>
     </div>
+    {%for message in get_flashed_messages(category_filter=["trip"])%}
+    <p class="text-danger">{{message}}</p>
+    {%endfor%}
     
     
     
@@ -99,19 +124,20 @@
     <br>
     <br>
     <br>
-    <a href="#">
-        <span class="material-symbols-outlined">support_agent</span>Contact support for any issue
-        <br>
-    </a>
-    <a href="#">
-        <span class="material-symbols-outlined">report</span>Report a bug here
-        <h3></h3>
-        <br>
-        <br>
-    </a>
-    <a href="#">
-        <span class="material-symbols-outlined">cookie</span>Accept all cookies
-    </a>
+    <footer style="text-align: center; padding: 20px; background-color: #f1f1f1;">
+        <a href="#" style="text-decoration: none; color: black;">
+            <span class="material-symbols-outlined">support_agent</span> Contact support for any issue
+            <br>
+        </a>
+        <a href="#" style="text-decoration: none; color: black;">
+            <span class="material-symbols-outlined">report</span> Report a bug here
+            <br>
+            <br>
+        </a>
+        <a href="#" style="text-decoration: none; color: black;">
+            <span class="material-symbols-outlined">cookie</span> Accept all cookies
+        </a>
+    </footer>
     
 
 
