--- a/flask_app/templates/trip_edit.html
+++ b/flask_app/templates/trip_edit.html
@@ -121,12 +121,15 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <title>Edit Your Trip</title>
+    <title>Trip Edit</title>
 </head>
 
 <body>
 
-    <h3>Edit Your Trip Here!</h3>
+    <h4 class="display-6 font-weight-bold text-center " style="text-shadow: 2px 2px 5px rgba(0,0,0,0.2);color: #6711f3;">Edit Your Trip Here</h4>
+
+       
+    
 
     <div class="top-right-buttons">
         <a href="/trips" class="btn btn-primary">
@@ -176,7 +179,7 @@
             <div class="col-6">
                 <div class="form-group">
                     <label for="rate">
-                        <span class="material-symbols-outlined">star_rate</span> Rate Our Services
+                        <span class="material-symbols-outlined">star_rate</span> Leave a Note Here:
                     </label>
                     <input type="text" id="rate" class="form-control" name="rate" required>
                 </div>
